Remove now empty GridMapView
- more completely document exceptions throw
- replace some asserts with IllegalArgumentException
- convert some locals to var
- remove lint and javadoc lint